Properly exclude node_modules from the final build
Also Ignore git files from the final build and remove the test folder from the build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
           type: 'zip'
           filename: ${{ env.BUILD_ARTIFACT_STAGING_DIR }}build.zip
           path: ${{ env.BUILD_SOURCE_DIR }}
-          exclusions: 'storage/* build/* node_modules/*'
+          exclusions: 'storage/* *.git* .editorconfig /*node_modules/* /tests/*'
 
       - name: ➗ Calculate checksum
         run: openssl md5 ${{ env.BUILD_ARTIFACT_STAGING_DIR }}build.zip | cut -d" " -f2 > ${{ env.BUILD_ARTIFACT_STAGING_DIR }}checksum.txt
