--- a/composer.json
+++ b/composer.json
@@ -41,11 +41,6 @@
     "type": "project",
     "minimum-stability": "stable",
     "require": {
-        "inertiajs/inertia-laravel": "^2.0",
-        "tightenco/ziggy": "^2.3",
-        "spatie/laravel-data": "^4.9",
-        "spatie/laravel-typescript-transformer": "^2.5",
-        "spatie/enum": "^3.13",
         "aacotroneo/laravel-saml2": "^2.1.0",
         "abcaeffchen/sephpa": "^2.1.2",
         "alaouy/youtube": "2.2.5",
@@ -56,6 +51,7 @@
         "globalcitizen/php-iban": "4.2.3",
         "graham-campbell/markdown": "^15.2",
         "guzzlehttp/guzzle": "^7.5",
+        "intervention/image": "^3.5.0",
         "jwilsson/spotify-web-api-php": "^6.0",
         "laravel/framework": "^11.31.0",
         "laravel/helpers": "^1.7.0",
@@ -75,13 +71,16 @@
         "vinkla/hashids": "^12.0",
         "willvincent/feeds": "^2.4",
         "setasign/tfpdf": "^1.33",
+        "inertiajs/inertia-laravel": "^2.0",
+        "tightenco/ziggy": "^2.4",
+        "spatie/laravel-data": "^4.11",
+        "spatie/laravel-typescript-transformer": "^2.5",
+        "spatie/enum": "^3.13",
+        "pusher/pusher-php-server": "^7.2",
         "ext-iconv": "*",
         "litesaml/lightsaml": "^4.2",
         "ext-zlib": "*",
-        "intervention/image-laravel": "^1.3",
-        "google/apiclient": "^2.15.0",
-        "ably/ably-php": "^1.1",
-        "pusher/pusher-php-server": "^7.2"
+        "google/apiclient": "^2.18"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
@@ -97,8 +96,8 @@
         "pestphp/pest": "^3.0",
         "mockery/mockery": "^1.6",
         "pestphp/pest-plugin-laravel": "^3.0",
-        "laravel/dusk": "^8.2",
-        "aaronfrancis/solo": "^0.2.1"
+        "aaronfrancis/solo": "^0.2.2",
+        "laravel/dusk": "^8.2"
     },
     "autoload": {
         "psr-4": {
