--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm ci --ignore-scripts
 
       - name: lint with prettier
-        run: npx prettier --write resources/views/**/*.blade.php
+        run: npx prettier --write resources/
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
