--- a/composer.json
+++ b/composer.json
@@ -110,7 +110,7 @@
     },
     "scripts": {
         "fix": [
-            "./vendor/bin/rector process && ./vendor/bin/pint && npx prettier --write resources/views/**/*.blade.php"
+            "./vendor/bin/rector process && ./vendor/bin/pint && npx prettier --write resources/"
         ],
         "pint": [
             "./vendor/bin/pint"
