Try to fix the lint action not being able to push when the blade linter finishes first

--- a/.github/workflows/fix_php.yml
+++ b/.github/workflows/fix_php.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Run pint
         run: ./vendor/bin/pint
 
+      - name: Fetch latest changes
+        run: git fetch origin ${{ github.head_ref }}
+
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
