--- a/.github/workflows/fix_php.yml
+++ b/.github/workflows/fix_php.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Run pint
         run: ./vendor/bin/pint
 
-      - name: Fetch latest changes
-        run: git fetch origin ${{ github.head_ref }}
+      - name: Pull the latest changes
+        run: git pull origin ${{ github.head_ref }}
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
