--- a/.github/workflows/fix_php.yml
+++ b/.github/workflows/fix_php.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Run pint
         run: ./vendor/bin/pint
 
+      - name: Pull the latest changes
+        run: git pull origin ${{ github.head_ref }}
+
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
