--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@popperjs/core": "^2.11.4",
         "@radix-icons/vue": "^1.0.0",
         "@rushstack/eslint-patch": "^1.10.4",
+        "@vueuse/core": "^12.5.0",
         "bootstrap": "^5.3.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
