Uninstall aaronfrancis/solo untill the screen issue is fixed
Afterwards should be soloterm/solo

--- a/composer.json
+++ b/composer.json
@@ -92,8 +92,7 @@
         "pestphp/pest": "^3.0",
         "mockery/mockery": "^1.6",
         "pestphp/pest-plugin-laravel": "^3.0",
-        "laravel/dusk": "^8.2",
-        "aaronfrancis/solo": "^0.2.1"
+        "laravel/dusk": "^8.2"
     },
     "autoload": {
         "psr-4": {
