Move over to anhskohbo/no-captcha

--- a/.env.dev
+++ b/.env.dev
@@ -46,6 +46,9 @@ SMTP_PASSWORD=null
 GOOGLE_KEY_PUBLIC=API_KEY
 GOOGLE_KEY_PRIVATE=API_KEY
 
+NOCAPTCHA_SECRET=secret-key
+NOCAPTCHA_SITEKEY=site-key
+
 SPOTIFY_USER=studyassociationproto
 SPOTIFY_CLIENT=SpotifyKey
 SPOTIFY_SECRET=SpotifySecret
