--- a/.env.prod
+++ b/.env.prod
@@ -41,6 +41,9 @@ SMTP_PASSWORD=password
 GOOGLE_KEY_PUBLIC=API_KEY
 GOOGLE_KEY_PRIVATE=API_KEY
 
+NOCAPTCHA_SECRET=secret-key
+NOCAPTCHA_SITEKEY=site-key
+
 SPOTIFY_USER=studyassociationproto
 SPOTIFY_CLIENT=SpotifyKey
 SPOTIFY_SECRET=SpotifySecret
