--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,6 @@
         "aacotroneo/laravel-saml2": "^2.1.0",
         "abcaeffchen/sephpa": "^2.1.2",
         "alaouy/youtube": "2.2.5",
-        "biscolab/laravel-recaptcha": "^6",
         "ext-calendar": "*",
         "ext-curl": "*",
         "ext-json": "*",
@@ -76,7 +75,8 @@
         "intervention/image-laravel": "^1.3",
         "google/apiclient": "^2.15.0",
         "ably/ably-php": "^1.1",
-        "pusher/pusher-php-server": "^7.2"
+        "pusher/pusher-php-server": "^7.2",
+        "anhskohbo/no-captcha": "^3.7"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
