Remove Solo and update packages

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
         "ext-curl": "*",
         "ext-json": "*",
         "globalcitizen/php-iban": "4.2.3",
-        "graham-campbell/markdown": "^15.2",
+        "graham-campbell/markdown": "^16.0.0",
         "guzzlehttp/guzzle": "^7.5",
         "jwilsson/spotify-web-api-php": "^6.0",
         "laravel/framework": "^11.31.0",
@@ -56,10 +56,10 @@
         "laravel/passport": "^12.3.0",
         "league/commonmark": "^2.3",
         "league/oauth1-client": "^1.7",
-        "milon/barcode": "^11.0",
+        "milon/barcode": "^12.0",
         "mollie/laravel-mollie": "^3.0",
         "nesbot/carbon": "^2.62",
-        "nickurt/laravel-pwned-passwords": "^1.11",
+        "nickurt/laravel-pwned-passwords": "^2.0",
         "pragmarx/google2fa": "^8.0",
         "sentry/sentry-laravel": "^4.4.1",
         "solitweb/directadmin": "^3.0",
@@ -83,17 +83,16 @@
         "fakerphp/faker": "^1.13",
         "itsgoingd/clockwork": "^5.1",
         "laravel/tinker": "^2.6",
-        "larastan/larastan": "^2.9",
+        "larastan/larastan": "^3.1.0",
         "symfony/css-selector": "~4.0",
         "symfony/dom-crawler": "~4.0",
         "laravel/sail": "^1.16",
         "laravel/pint": "^1.10",
-        "driftingly/rector-laravel": "^1.2",
+        "driftingly/rector-laravel": "^2.0.2",
         "pestphp/pest": "^3.0",
         "mockery/mockery": "^1.6",
         "pestphp/pest-plugin-laravel": "^3.0",
-        "laravel/dusk": "^8.2",
-        "aaronfrancis/solo": "^0.2.1"
+        "laravel/dusk": "^8.2"
     },
     "autoload": {
         "psr-4": {
