Add the reverse lookup for town and country from sticker coordinates

--- a/.env.prod
+++ b/.env.prod
@@ -111,6 +111,8 @@ PUSHER_APP_SECRET=app-secret
 PUSHER_APP_CLUSTER=eu
 PUSHER_SCHEME=https
 
+GEO_PROVIDER='https://nominatim.openstreetmap.org'
+
 #These variables are set via the github actions secrets, because our frontend is built there.
 #VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 #VITE_PUSHER_HOST="${PUSHER_HOST}"
