--- a/.env.dev
+++ b/.env.dev
@@ -99,6 +99,8 @@ SEPA_IBAN=IBAN
 SEPA_BIC=BIC
 SEPA_CI=CREDITOR_ID
 
+GEO_PROVIDER='https://nominatim.openstreetmap.org'
+
 TIMETABLE_GOOGLE_CALENDAR_ID=timetable_id@import.calendar.google.com
 SMARTXP_GOOGLE_CALENDAR_ID=smartxp_id@import.calendar.google.com
 PROTOPENERS_GOOGLE_CALENDAR_ID=protopeners_id@import.calendar.google.com
