Increase the ftp deploy timeout

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,3 +90,4 @@ jobs:
           password: ${{ secrets.VIMEXX_FTP_PASSWORD }}
           local-dir: ${{ env.BUILD_ARTIFACT_STAGING_DIR }}
           server-dir: "/"
+          timeout: 120000
