Make use of the npm installed libraries and finishing touches

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
         "codethereal-iconpicker": "^1.2.1",
         "cross-env": "^7.0.3",
         "easymde": "^2.18.0",
+        "leaflet": "^1.9.4",
+        "leaflet-geosearch": "^4.2.0",
+        "leaflet.markercluster": "^1.5.3",
         "moment": "^2.29.2",
         "quagga": "^0.6.16",
         "signature_pad": "^3.0.0-beta.4",
