WIP: Saml - surfconext cleanup (#2280)
* New saml (#2276)

* Fixing trust issues

* basic saml

* wip

* install surfconext dependencies

* Reorganize things

* Remove other saml stuff

* Minor cleanups

* Minor styling

* Update example envs

* Prettify config

* fix name/enable captcha

* Cleanup

* spacing in ui

* Wrong import fix

* Automatic Blade linting (Prettier Blade)

* Fix composer.lock

* Automatic Blade linting (Prettier Blade)

* Added back register button and fixed javascript

* Fix extra spaces showing up in the feedback boards due to whitespace:prewrap

* Automatic Blade linting (Prettier Blade)

* Fix redirect on chrome

* PHP Automatic Fixing (Pint & Rector)

* Run the linter

* Automatic Blade linting (Prettier Blade)

* Update beyondcode/expose

* PHP Automatic Fixing (Pint & Rector)

* Small phpstan fixes

* PHP Automatic Fixing (Pint & Rector)

---------

Co-authored-by: Burgstede, W.Y. (Ysbrand, Student B-CREA) <w.y.burgstede@student.utwente.nl>
Co-authored-by: ysbrandB <72889753+ysbrandB@users.noreply.github.com>
Co-authored-by: Jesse Visser <dev@jesse-visser.nl>
Co-authored-by: Jessseee <21026046+Jessseee@users.noreply.github.com>

--- a/.env.dev
+++ b/.env.dev
@@ -76,22 +76,8 @@ DISCORD_CLIENT=oauth_client_id
 DISCORD_SECRET=BIG_SECRET
 PROBOTO_SECRET=EVEN_BIGGER_SECRET
 
-SAML2_SP_CERT=X509_CERT_DATA
-SAML2_SP_KEY=X509_KEY_DATA
-
-SAML2_SP_REMOTE_ENTITY_ID=https://idp.provider.tld
-SAML2_SP_REMOTE_SOS=https://sos.url
-SAML2_SP_REMOTE_SLS=https://sls.url
-SAML2_SP_REMOTE_CERT=X509_CERT_DATA
-
-SAML2_ATTR_FIRSTNAME=urn:mace:dir:attribute-def:givenName
-SAML2_ATTR_SURNAME=urn:mace:dir:attribute-def:sn
-SAML2_ATTR_EMAIL=urn:mace:dir:attribute-def:mail
-SAML2_ATTR_UID=urn:mace:dir:attribute-def:uid
-
-SAML2_IDP_ENTITY_ID=https://idp.proto.utwente.nl
-SAML2_IDP_CERT=X509_CERT_RELATIVE_PATH
-SAML2_IDP_KEY=X509_KEY_RELATIVE_PATH
+SAML_SP_ENTITY_ID="https://imaginary_url.proto"
+SAML_IDP_METADATA_URL="https://metadata.test.surfconext.nl/idp-metadata.xml"
 
 HASHIDS_SECRET_EVENTS=RAND_STRING
 
