--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,6 @@
     "type": "project",
     "minimum-stability": "stable",
     "require": {
-        "aacotroneo/laravel-saml2": "^2.1.0",
         "abcaeffchen/sephpa": "^2.1.2",
         "alaouy/youtube": "2.2.5",
         "ext-calendar": "*",
@@ -69,9 +68,10 @@
         "willvincent/feeds": "^2.4",
         "setasign/tfpdf": "^1.33",
         "ext-iconv": "*",
-        "litesaml/lightsaml": "^4.2",
         "ext-zlib": "*",
         "intervention/image-laravel": "^1.3",
+        "laravel/socialite": "^5.19",
+        "socialiteproviders/saml2": "^4.7",
         "google/apiclient": "^2.15.0",
         "ably/ably-php": "^1.1",
         "pusher/pusher-php-server": "^7.2",
@@ -91,7 +91,8 @@
         "pestphp/pest": "^3.0",
         "mockery/mockery": "^1.6",
         "pestphp/pest-plugin-laravel": "^3.0",
-        "laravel/dusk": "^8.2"
+        "laravel/dusk": "^8.2",
+        "beyondcode/expose": "^3.0"
     },
     "autoload": {
         "psr-4": {
