--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -5,6 +5,9 @@ includes:
 
 parameters:
 
+    excludePaths:
+        - app/Libraries
+
     paths:
         - app
 
@@ -15,7 +18,3 @@ parameters:
         - '#Cannot access property (.*) on array\|object.#'
         # Issue with SephpaInputException not being a subtype of Throwable
         - '#AbcAeffchen\\Sephpa\\SephpaInputException#'
-        # Issue with incorrect type hinting on Illuminate\Support\Collection methods
-        - '#Illuminate\\Support\\Collection<(.*)>::#'
-        -
-        			identifier: class.nameCase
