Update composer and npm

--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
         "codethereal-iconpicker": "^1.2.1",
         "cross-env": "^7.0.3",
         "easymde": "^2.18.0",
-        "lucide-vue-next": "^0.474.0",
         "leaflet": "^1.9.4",
         "leaflet-geosearch": "^4.2.0",
         "leaflet.markercluster": "^1.5.3",
+        "lucide-vue-next": "^0.474.0",
         "moment": "^2.29.2",
         "quagga": "^0.6.16",
         "radix-vue": "^1.9.13",
@@ -71,12 +71,10 @@
         "prettier-plugin-blade": "^2.1.19",
         "pusher-js": "^8.4.0-rc2",
         "resolve-url-loader": "^5.0.0",
-        "sass": "1.38.2",
-        "sass-loader": "^12.1.0",
+        "sass": "^1.89.0",
         "tailwindcss": "^3.4.17",
         "tw-colors": "^3.3.2",
         "typescript": "^5.0.2",
-        "vite": "^5.0",
         "vite-plugin-checker": "^0.6.4",
         "vue": "^3.4.0",
         "vue-tsc": "^2.1.6"
