--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "swiper": "^8.0.7",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
+        "tw-animate-css": "^1.3.0",
         "util.promisify": "^1.0.1"
     },
     "devDependencies": {
