--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -26,8 +26,8 @@ jobs:
       - name: 📥 Install front-end dependencies
         run: npm ci --ignore-scripts
 
-      - name: lint with prettier
-        run: npx prettier --write resources/
+      - name: lint with eslint and prettier
+        run: npx eslint resources --fix
 
       - name: Pull the latest changes
         run: git pull origin ${{ github.head_ref }}
