--- a/composer.json
+++ b/composer.json
@@ -114,7 +114,7 @@
     },
     "scripts": {
         "fix": [
-            "./vendor/bin/rector process && ./vendor/bin/pint && npx prettier --write resources/"
+            "./vendor/bin/rector process && ./vendor/bin/pint && npx eslint resources --fix"
         ],
         "pint": [
             "./vendor/bin/pint"
