--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
         "tailwindcss-animate": "^1.0.7",
         "tw-animate-css": "^1.3.0",
         "util.promisify": "^1.0.1",
-        "vue-eslint-parser": "^10.1.3"
+        "vue-eslint-parser": "^10.1.3",
+        "ziggy-js": "^2.5.3"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
