--- a/.github/workflows/fix_php.yml
+++ b/.github/workflows/fix_php.yml
@@ -22,6 +22,8 @@ jobs:
         with:
           composer-options: "--ignore-platform-reqs --optimize-autoloader --prefer-dist"
 
+      - run: php artisan typescript:transform
+
       - uses: actions/cache@v4
         with:
           path: .tmp/rector
