--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -119,17 +119,6 @@ jobs:
           php artisan migrate
           vendor/bin/pest --ci
 
-      - name: Cache PHPStan results
-        uses: actions/cache@v4
-        with:
-          path: .phpstan/cache
-          key: ${{ runner.os }}-phpstan-${{ hashFiles('phpstan.neon', 'composer.lock') }}
-          restore-keys: ${{ runner.os }}-phpstan-
-
-
-      - name: 🧠 Run PHPStan static analysis
-        run: vendor/bin/phpstan analyse
-
       - name: Check if laravel caching works
         run: |
           php artisan optimize:clear
@@ -141,6 +130,45 @@ jobs:
         with:
           name: laravel-failure-artifact
           path: storage/logs/laravel.log
+
+  larastan:
+    name: 🧠 Analyse code statically with phpstan
+    runs-on: ubuntu-latest
+    needs: [ call-phplint ]
+    steps:
+      - name: 🛎️ Checkout project
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
+
+      - name: 🔍 Read .env
+        run: (grep -E 'PHP_VERSION' .env.prod >> $GITHUB_ENV && cp .env.ci .env)
+
+      - name: 🖱️ Setup PHP v${{ env.PHP_VERSION }}
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ env.PHP_VERSION }}
+          coverage: none
+
+      - uses: ramsey/composer-install@v3
+        with:
+          composer-options: "--ignore-platform-reqs --optimize-autoloader --prefer-dist"
+
+      - run: composer dump-autoload
+
+      - name: Cache PHPStan results
+        uses: actions/cache@v4
+        with:
+          path: .phpstan/cache
+          key: ${{ runner.os }}-phpstan-${{ hashFiles('phpstan.neon', 'composer.lock') }}
+          restore-keys: ${{ runner.os }}-phpstan-
+
+      - name: generate laravel app key
+        run: php artisan key:generate
+
+      - name: 🧠 Run PHPStan static analysis
+        run: vendor/bin/phpstan analyse
+
   dusk:
     name: 🌜 Dusk Tests
     runs-on: ubuntu-latest
