Add a fake youtube key to .env.ci

--- a/.env.ci
+++ b/.env.ci
@@ -11,6 +11,9 @@ APP_KEY=
 APP_URL=http://127.0.0.1:8000
 APP_TIMEZONE=UTC
 
+GOOGLE_KEY_PUBLIC=API_KEY
+GOOGLE_KEY_PRIVATE=API_KEY
+
 SESSION_DRIVER=array
 CACHE_DRIVER=array
 QUEUE_DRIVER=sync
