--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -4,7 +4,7 @@ includes:
     - ./vendor/nesbot/carbon/extension.neon
 
 parameters:
-
+    tmpDir: tmp
     excludePaths:
         - app/Libraries
 
