--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "tailwindcss-animate": "^1.0.7",
         "tw-animate-css": "^1.3.0",
         "util.promisify": "^1.0.1",
+        "vaul-vue": "^0.4.1",
         "vue-eslint-parser": "^10.1.3",
         "ziggy-js": "^2.5.3"
     },
