--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
         "graham-campbell/markdown": "^16.0.0",
         "guzzlehttp/guzzle": "^7.5",
         "jwilsson/spotify-web-api-php": "^6.0",
-        "laravel/framework": "^11.31.0",
+        "laravel/framework": "^v12.16.0",
         "laravel/helpers": "^1.7.0",
         "laravel/passport": "^12.3.0",
         "league/commonmark": "^2.3",
@@ -64,7 +64,7 @@
         "spatie/laravel-csp": "^2.9",
         "spatie/laravel-permission": "^6",
         "spipu/html2pdf": "^5.2",
-        "vinkla/hashids": "^12.0",
+        "vinkla/hashids": "^13.0.0",
         "willvincent/feeds": "^2.4",
         "setasign/tfpdf": "^1.33",
         "inertiajs/inertia-laravel": "^2.0",
