--- a/.github/workflows/fix_php.yml
+++ b/.github/workflows/fix_php.yml
@@ -43,7 +43,7 @@ jobs:
           restore-keys: ${{ runner.os }}-pint-
 
       - name: Run pint
-        run: ./vendor/bin/pint
+        run: ./vendor/bin/pint --diff=master
 
       - name: Pull the latest changes
         run: git pull origin ${{ github.head_ref }}
