--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@inertiajs/vue3": "^2.0.0",
         "@nabla/vite-plugin-eslint": "^2.0.4",
         "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/postcss": "^4.1.10",
         "@tailwindcss/typography": "^0.5.13",
         "@typescript-eslint/eslint-plugin": "^8.8.0",
         "@typescript-eslint/parser": "^8.8.0",
