--- a/composer.json
+++ b/composer.json
@@ -80,7 +80,8 @@
         "socialiteproviders/saml2": "^4.7",
         "google/apiclient": "^2.18.0",
         "ably/ably-php": "^1.1",
-        "anhskohbo/no-captcha": "^3.7"
+        "anhskohbo/no-captcha": "^3.7",
+        "spatie/laravel-medialibrary": "^11.13"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
