--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ tmp
 # Local files
 /personal
 public/storage
+/storage/media-library
 
 # IDE files
 /.idea
@@ -55,4 +56,5 @@ storage/oauth-public.key
 
 #Google Cloud Platform Credentials
 application_default_credentials.json
+
 
