--- a/composer.json
+++ b/composer.json
@@ -113,7 +113,7 @@
     },
     "scripts": {
         "fix": [
-            "./vendor/bin/rector process && ./vendor/bin/pint --diff=master && npx eslint resources/ --fix && npx prettier --write resources/"
+            "./vendor/bin/rector process && ./vendor/bin/pint --diff=master --parallel && npx eslint resources/ --fix && npx prettier --write resources/"
         ],
         "pint": [
             "./vendor/bin/pint"
