Add the Directory

--- a/composer.json
+++ b/composer.json
@@ -162,7 +162,8 @@
     "extra": {
         "google/apiclient-services": [
             "Drive",
-            "Gmail"
+            "Gmail",
+            "Directory"
         ]
     }
 }
