--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "util.promisify": "^1.0.1",
         "vaul-vue": "^0.4.1",
         "vue-eslint-parser": "^10.1.3",
+        "vue-sonner": "^2.0.2",
         "ziggy-js": "^2.5.3"
     },
     "devDependencies": {
