Make buttons use cursor:pointer and throttle the nextPhoto function

--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
         "@radix-icons/vue": "^1.0.0",
         "@rushstack/eslint-patch": "^1.10.4",
         "@tanstack/vue-table": "^8.21.3",
-        "@vueuse/core": "^13.3.0",
+        "@vueuse/core": "^13.5.0",
         "bootstrap": "^5.3.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "codethereal-iconpicker": "^1.2.1",
         "cross-env": "^7.0.3",
         "easymde": "^2.18.0",
+        "embla-carousel-vue": "^8.6.0",
         "eslint": "^9.27.0",
         "leaflet": "^1.9.4",
         "leaflet-geosearch": "^4.2.0",
@@ -45,12 +46,12 @@
         "lucide-vue-next": "^0.515.0",
         "moment": "^2.29.2",
         "radix-vue": "^1.9.13",
-        "reka-ui": "^2.3.1",
+        "reka-ui": "^2.4.0",
         "signature_pad": "^3.0.0-beta.4",
         "swiper": "^11.2.8",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7",
-        "tw-animate-css": "^1.3.4",
+        "tw-animate-css": "^1.3.6",
         "util.promisify": "^1.0.1",
         "vaul-vue": "^0.4.1",
         "vue-eslint-parser": "^10.1.3",
