--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "easymde": "^2.18.0",
         "embla-carousel-vue": "^8.6.0",
         "eslint": "^9.27.0",
+        "exifreader": "^4.31.1",
         "leaflet": "^1.9.4",
         "leaflet-geosearch": "^4.2.0",
         "leaflet.markercluster": "^1.5.3",
