--- a/composer.json
+++ b/composer.json
@@ -81,7 +81,8 @@
         "google/apiclient": "^2.18.0",
         "ably/ably-php": "^1.1",
         "anhskohbo/no-captcha": "^3.7",
-        "spatie/laravel-medialibrary": "^11.13"
+        "spatie/laravel-medialibrary": "^11.13",
+        "league/flysystem-sftp-v3": "^3.30"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
