Combine the filters for the omnomcom orderlines and add a filter for product(s)

--- a/.env.dev
+++ b/.env.dev
@@ -43,6 +43,11 @@ SMTP_PORT=1025
 SMTP_USERNAME=null
 SMTP_PASSWORD=null
 
+SFTP_HOST=
+SFTP_USERNAME=
+SFTP_PASSWORD=
+SFTP_ROOT=testing
+
 GOOGLE_KEY_PUBLIC=API_KEY
 GOOGLE_KEY_PRIVATE=API_KEY
 
