--- a/.env.prod
+++ b/.env.prod
@@ -38,6 +38,11 @@ MAIL_DRIVER=smtp
 SMTP_USERNAME=user
 SMTP_PASSWORD=password
 
+SFTP_HOST=https://path.to/sftp_drive
+SFTP_USERNAME=sftp_user
+SFTP_PASSWORD=sftp_password
+SFTP_ROOT=laravel
+
 GOOGLE_KEY_PUBLIC=API_KEY
 GOOGLE_KEY_PRIVATE=API_KEY
 
