--- a/composer.json
+++ b/composer.json
@@ -95,8 +95,8 @@
         "driftingly/rector-laravel": "^2.0.2",
         "mockery/mockery": "^1.6",
         "pestphp/pest-plugin-laravel": "^4.0.0",
-        "laravel/dusk": "^8.2",
-        "beyondcode/expose": "^3.0"
+        "beyondcode/expose": "^3.0",
+        "pestphp/pest-plugin-browser": "^4.0"
     },
     "autoload": {
         "psr-4": {
