let the frontendbuild install playwright

--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -24,7 +24,9 @@ jobs:
           cache: npm
 
       - name: 📥 Install front-end dependencies
-        run: npm ci --ignore-scripts
+        env:
+          PLAYWRIGHT_BROWSERS_PATH: 0
+        run: npm ci
 
       - name: lint with eslint
         run: npx eslint resources/ --fix
