--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -49,6 +49,8 @@ jobs:
   pest:
     name: 🐘 Pest Tests
     runs-on: ubuntu-latest
+    env:
+      PLAYWRIGHT_BROWSERS_PATH: 0
     needs: [ call-phplint, frontendbuild ]
     services:
       mysql:
@@ -98,10 +100,11 @@ jobs:
       - name: 📥 Install front-end dependencies
         run: npm ci --ignore-scripts
 
-      - name: Install playwright dependencies
-        env:
-          PLAYWRIGHT_BROWSERS_PATH: 0
-        run: npx playwright install --with-deps
+      - name: install playwrights dependencies
+        run: npx playwright install-deps
+
+      - name: Install playwright
+        run: npx playwright install
 
       - name: 🔨 build front-end
         run: npm run build --if-present
