--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -100,11 +100,8 @@ jobs:
       - name: 📥 Install front-end dependencies
         run: npm ci --ignore-scripts
 
-      - name: install playwrights dependencies
-        run: npx playwright install-deps
-
-      - name: Install playwright
-        run: npx playwright install
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
       - name: 🔨 build front-end
         run: npm run build --if-present
@@ -129,7 +126,7 @@ jobs:
         run: |
           php artisan key:generate
           php artisan migrate
-          vendor/bin/pest --ci
+          vendor/bin/pest --ci --parallel
 
       - name: Check if laravel caching works
         run: |
