--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vue-tsc && vite build",
-        "postinstall": "npx playwright install"
+        "postinstall": "npx playwright install chromium"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.6.0",
