--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -6,52 +6,11 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  frontendbuild:
-    runs-on: ubuntu-latest
-    name: 🛠 Lint front-end
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref }}
-
-      - name: 🔍 Read .env
-        run: grep -E 'NODE_VERSION' .env.prod >> $GITHUB_ENV && cp .env.ci .env
-
-      - name: 🖱️ Set Node v${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: npm
-
-      - name: 📥 Install front-end dependencies
-        run: npm ci --ignore-scripts
-
-      - name: lint with eslint
-        run: npx eslint resources/ --fix
-
-      - name: lint with prettier
-        run: npx prettier --write resources/
-
-      - name: Pull the latest changes
-        run: git pull origin ${{ github.head_ref }}
-
-      - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: Automatic linting (Prettier and eslint)
-          skip_fetch: true
-
-  call-phplint:
-    name: Fix php
-    uses: ./.github/workflows/fix_php.yml
-    secrets: inherit
-
   pest:
     name: 🐘 Pest Tests
     runs-on: ubuntu-latest
     env:
       PLAYWRIGHT_BROWSERS_PATH: 0
-    needs: [ call-phplint, frontendbuild ]
     services:
       mysql:
         image: mariadb:10
@@ -82,11 +41,41 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ env.PHP_VERSION }}
-          coverage: none
+          coverage: xdebug
 
       - uses: ramsey/composer-install@v3
         with:
           composer-options: "--ignore-platform-reqs --optimize-autoloader --prefer-dist"
+      - run: php artisan typescript:transform
+
+      - uses: actions/cache@v4
+        with:
+          path: .tmp/rector
+          key: ${{ runner.os }}-rector-${{ github.run_id }}-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-rector-
+
+      - run: php artisan typescript:transform
+
+      - run: mkdir -p .tmp/rector
+
+      - name: Run rector
+        run: vendor/bin/rector --ansi
+
+      - name: Cache Pint
+        uses: actions/cache@v4
+        with:
+          path: .tmp/pint.cache
+          key: ${{ runner.os }}-pint-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-pint-
+
+      - name: Run pint
+        run: ./vendor/bin/pint --diff=master --parallel
+
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: PHP Automatic Fixing (Pint & Rector)
+          skip_fetch: true
 
       - name: 🔍 Read .env
         run: grep -E 'NODE_VERSION' .env.prod >> $GITHUB_ENV
@@ -99,6 +88,18 @@ jobs:
 
       - name: 📥 Install front-end dependencies
         run: npm ci --ignore-scripts
+
+      - name: lint with eslint
+        run: npx eslint resources/ --fix
+
+      - name: lint with prettier
+        run: npx prettier --write resources/
+
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Automatic linting (Prettier and eslint)
+          skip_fetch: true
 
       - name: Install Playwright Browsers
         run: npx playwright install chromium --with-deps
@@ -133,7 +134,6 @@ jobs:
           php artisan optimize:clear
           php artisan optimize
 
-
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
@@ -143,7 +143,6 @@ jobs:
   larastan:
     name: 🧠 Analyse code statically with phpstan
     runs-on: ubuntu-latest
-    needs: [ call-phplint ]
     steps:
       - name: 🛎️ Checkout project
         uses: actions/checkout@v4
