--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -46,6 +46,7 @@ jobs:
       - uses: ramsey/composer-install@v3
         with:
           composer-options: "--ignore-platform-reqs --optimize-autoloader --prefer-dist"
+
       - run: php artisan typescript:transform
 
       - uses: actions/cache@v4
@@ -53,8 +54,6 @@ jobs:
           path: .tmp/rector
           key: ${{ runner.os }}-rector-${{ github.run_id }}-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-rector-
-
-      - run: php artisan typescript:transform
 
       - run: mkdir -p .tmp/rector
 
@@ -89,10 +88,19 @@ jobs:
       - name: 📥 Install front-end dependencies
         run: npm ci --ignore-scripts
 
+      - uses: dorny/paths-filter@v3
+        id: changes
+        with:
+          filters: |
+            resources:
+              - 'resources/**'
+
       - name: lint with eslint
+        if: steps.changes.outputs.resources == 'true'
         run: npx eslint resources/ --fix
 
       - name: lint with prettier
+        if: steps.changes.outputs.resources == 'true'
         run: npx prettier --write resources/
 
       - name: Commit changes
