Update to Pest V4 and remove Laravel Dusk (#2446)
* Update Pest to V4 (includes new browser testing!)

* Publish the sail docker files and install playwright

Also remove laravel Dusk

* PHP Automatic Fixing (Pint & Rector)

* Update the package-lock.json

* let the frontendbuild install playwright

* Move the frontendbuild to the pest job

* x

* Try to make it a bit faster

* Update composer.lock

* Only make the action install chromium

* Is this faster?

* Only run eslint and prettier when the resources/ dir has changes

--- a/composer.json
+++ b/composer.json
@@ -93,11 +93,10 @@
         "laravel/sail": "^1.16",
         "laravel/pint": "^1.10",
         "driftingly/rector-laravel": "^2.0.2",
-        "pestphp/pest": "^3.0",
         "mockery/mockery": "^1.6",
-        "pestphp/pest-plugin-laravel": "^3.0",
-        "laravel/dusk": "^8.2",
-        "beyondcode/expose": "^3.0"
+        "pestphp/pest-plugin-laravel": "^4.0.0",
+        "beyondcode/expose": "^3.0",
+        "pestphp/pest-plugin-browser": "^4.0"
     },
     "autoload": {
         "psr-4": {
