--- a/package.json
+++ b/package.json
@@ -27,59 +27,58 @@
         "postinstall": "npx playwright install chromium"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.6.0",
+        "@fortawesome/fontawesome-free": "^7.0.0",
         "@popperjs/core": "^2.11.4",
         "@radix-icons/vue": "^1.0.0",
-        "@rushstack/eslint-patch": "^1.10.4",
         "@tanstack/vue-table": "^8.21.3",
         "@vueuse/core": "^13.5.0",
         "bootstrap": "^5.3.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "codethereal-iconpicker": "^1.2.1",
-        "cross-env": "^7.0.3",
         "easymde": "^2.18.0",
         "embla-carousel-vue": "^8.6.0",
-        "eslint": "^9.27.0",
         "exifreader": "^4.31.1",
         "leaflet": "^1.9.4",
         "leaflet-geosearch": "^4.2.0",
         "leaflet.markercluster": "^1.5.3",
-        "lucide-vue-next": "^0.515.0",
+        "lucide-vue-next": "^0.542.0",
         "moment": "^2.29.2",
-        "playwright": "^1.55.0",
         "radix-vue": "^1.9.13",
         "reka-ui": "^2.4.0",
-        "signature_pad": "^3.0.0-beta.4",
+        "signature_pad": "^5.0.10",
         "swiper": "^11.2.8",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7",
         "tw-animate-css": "^1.3.6",
         "util.promisify": "^1.0.1",
         "vaul-vue": "^0.4.1",
-        "vue-eslint-parser": "^10.1.3",
-        "vue-sonner": "^2.0.2",
+        "vue-sonner": "^2.0.8",
         "ziggy-js": "^2.5.3"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
         "@eslint/js": "^9.27.0",
         "@inertiajs/vue3": "^2.0.0",
-        "@nabla/vite-plugin-eslint": "^2.0.4",
+        "@nabla/vite-plugin-eslint": "^2.0.6",
+        "@rushstack/eslint-patch": "^1.12.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/postcss": "^4.1.10",
         "@tailwindcss/typography": "^0.5.13",
         "@typescript-eslint/eslint-plugin": "^8.8.0",
         "@typescript-eslint/parser": "^8.8.0",
-        "@vitejs/plugin-vue": "^5.0.0",
+        "@vitejs/plugin-vue": "^6.0.1",
         "@vue/eslint-config-typescript": "^14.5.0",
         "autoprefixer": "^10.4.20",
+        "cross-env": "^10.0.0",
+        "eslint": "^9.34.0",
         "eslint-config-prettier": "^10.1.5",
-        "eslint-plugin-vue": "^9.28.0",
+        "eslint-plugin-vue": "^10.4.0",
         "glob": "^11.0.0",
         "globals": "^16.1.0",
         "laravel-echo": "^2.1.5",
-        "laravel-vite-plugin": "^1.0",
+        "laravel-vite-plugin": "^2.0.1",
+        "playwright": "^1.55.0",
         "postcss": "^8.2.7",
         "postcss-discard-comments": "^7.0.3",
         "prettier": "^3.5.3",
@@ -91,9 +90,10 @@
         "tailwindcss": "^4.1.10",
         "tw-colors": "^3.3.2",
         "typescript": "^5.8.3",
-        "vite-plugin-checker": "^0.9.3",
+        "vite-plugin-checker": "^0.10.3",
         "vue": "^3.4.0",
-        "vue-tsc": "^2.2.10"
+        "vue-eslint-parser": "^10.2.0",
+        "vue-tsc": "^3.0.6"
     },
     "type": "module"
 }
