--- a/composer.json
+++ b/composer.json
@@ -114,10 +114,10 @@
     "scripts": {
         "pre-autoload-dump": "Google\\Task\\Composer::cleanup",
         "fix": [
-            "./vendor/bin/rector process && ./vendor/bin/pint --diff=master --parallel && npx eslint resources/ --fix && npx prettier --write resources/"
+            "./vendor/bin/rector process && ./vendor/bin/pint --parallel && npx eslint resources/ --fix && npx prettier --write resources/"
         ],
         "pint": [
-            "./vendor/bin/pint"
+            "./vendor/bin/pint --parallel"
         ],
         "rector": [
             "vendor/bin/rector process"
