--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
     laravel.test:
         container_name: '${SAIL_CONTAINER_NAME}-app'
         build:
-            context: ./docker/8.3
+            context: ./vendor/laravel/sail/runtimes/8.3
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
@@ -29,7 +29,7 @@ services:
             - redis
     mariadb:
         container_name: '${SAIL_CONTAINER_NAME}-mariadb'
-        image: 'mariadb:10'
+        image: 'mariadb:10.6'
         ports:
             - '${SAIL_SQL_PORT:-3306}:3306'
         environment:
@@ -40,7 +40,7 @@ services:
             MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
         volumes:
             - 'sail-mariadb:/var/lib/mysql'
-            - './docker/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+            - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         healthcheck:
             test: [ "CMD", "mysqladmin", "ping", "-u${DB_USERNAME}", "-p${DB_PASSWORD}" ]
             retries: 3
