Remove the code for the Soundboardsound storage entries

--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -179,7 +179,7 @@ jobs:
       - name: Cache PHPStan results
         uses: actions/cache@v4
         with:
-          path: tmp
+          path: .tmp/phpstan
           key: ${{ runner.os }}-phpstan-${{ hashFiles('phpstan.neon', 'composer.lock') }}
           restore-keys: ${{ runner.os }}-phpstan-
 
