--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
         "tw-animate-css": "^1.3.6",
         "util.promisify": "^1.0.1",
         "vaul-vue": "^0.4.1",
-        "vue-sonner": "^2.0.8",
-        "ziggy-js": "^2.5.3"
+        "vue-sonner": "^2.0.8"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
