Start moving the wrapped feature into the website itself

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "forceConsistentCasingInFileNames": true,
         "noEmit": true,
         "skipLibCheck": true,
+        "allowImportingTsExtensions": true,
         "paths": {
             "@/*": ["./resources/js/*"],
         },
