--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -82,7 +82,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: npm
+          cache: yarn
 
       - name: Cache Playwright
         uses: actions/cache@v4
@@ -90,10 +90,10 @@ jobs:
         with:
           path: |
             ~/.cache/ms-playwright
-          key: ${{ runner.os }}-playwright-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-playwright-${{ hashFiles('**/yarn.lock') }}
 
       - name: 📥 Install front-end dependencies
-        run: npm ci --ignore-scripts
+        run: yarn install --frozen-lockfile --ignore-scripts
 
       - name: Install playwright deps
         run: npx playwright install --with-deps chromium
@@ -121,7 +121,7 @@ jobs:
           skip_fetch: true
 
       - name: 🔨 build front-end
-        run: npm run build --if-present
+        run: yarn build 
 
       - name: Cache Pest test results
         uses: actions/cache@v4
