--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -143,6 +143,7 @@ jobs:
         run: |
           php artisan key:generate
           php artisan migrate
+          php artisan passport:keys
           vendor/bin/pest --ci --parallel
 
       - name: Check if laravel caching works
