--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -143,7 +143,14 @@ jobs:
         run: |
           php artisan key:generate
           php artisan migrate
+          php artisan schema:dump
           vendor/bin/pest --ci --parallel
+
+      - name: Commit changes (schema dump)
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Changed sql schema (artisan dump)
+          skip_fetch: true
 
       - name: Check if laravel caching works
         run: |
