--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
     laravel.test:
         container_name: '${SAIL_CONTAINER_NAME}-app'
         build:
-            context: ./vendor/laravel/sail/runtimes/8.3
+            context: ./vendor/laravel/sail/runtimes/${PHP_VERSION}
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
