--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/postcss": "^4.1.10",
         "@tailwindcss/typography": "^0.5.13",
+        "@types/dom-to-image": "^2.6.7",
         "@typescript-eslint/eslint-plugin": "^8.8.0",
         "@typescript-eslint/parser": "^8.8.0",
         "@vitejs/plugin-vue": "^6.0.1",
