--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "codethereal-iconpicker": "^1.2.1",
+        "dom-to-image": "^2.6.0",
         "easymde": "^2.18.0",
         "embla-carousel-vue": "^8.6.0",
         "exifreader": "^4.31.1",
-        "html2canvas": "^1.4.1",
         "leaflet": "^1.9.4",
         "leaflet-geosearch": "^4.2.0",
         "leaflet.markercluster": "^1.5.3",
@@ -66,6 +66,7 @@
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/postcss": "^4.1.10",
         "@tailwindcss/typography": "^0.5.13",
+        "@types/dom-to-image": "^2.6.7",
         "@typescript-eslint/eslint-plugin": "^8.8.0",
         "@typescript-eslint/parser": "^8.8.0",
         "@vitejs/plugin-vue": "^6.0.1",
