--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
         "tw-animate-css": "^1.3.6",
         "util.promisify": "^1.0.1",
         "vaul-vue": "^0.4.1",
-        "vue-sonner": "^2.0.8",
-        "ziggy-js": "^2.5.3"
+        "vue-sonner": "^2.0.8"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
         "@eslint/js": "^9.27.0",
         "@inertiajs/vue3": "^2.3.2",
+        "@laravel/vite-plugin-wayfinder": "^0.1.7",
         "@nabla/vite-plugin-eslint": "^2.0.6",
         "@rushstack/eslint-patch": "^1.12.0",
         "@tailwindcss/forms": "^0.5.3",
