--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@
 *.cache
 tmp
 
+#Laravel Wayfinder route info
+/resources/js/actions
+/resources/js/routes
+/resources/js/wayfinder
+
 # Local files
 /personal
 public/storage
@@ -36,11 +41,6 @@ yarn.lock
 # Generated files
 /public/build
 /public/hot
-
-#generated wayfinder files
-/resources/js/actions
-/resources/js/routes
-/resources/js/wayfinder
 
 # Font metadata files
 /resources/fonts/unifont/*.cw*
