--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -47,6 +47,8 @@ jobs:
 
       - run: php artisan typescript:transform
 
+      - run: php artisan wayfinder:generate
+
       - name: Cache Rector
         uses: actions/cache@v4
         with:
