Replace Ziggy with laravel Wayfinder (#2538)
* Install laravel wayfinder

* Fix the exclusions for wayfinder generated files

* Automatic linting (Prettier and eslint)

* add - run: php artisan wayfinder:generate to the github actions

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@
 *.cache
 tmp
 
+#Laravel Wayfinder route info
+/resources/js/actions
+/resources/js/routes
+/resources/js/wayfinder
+
 # Local files
 /personal
 public/storage
