--- a/.github/workflows/fix_php_and_test.yml
+++ b/.github/workflows/fix_php_and_test.yml
@@ -147,6 +147,7 @@ jobs:
         run: |
           php artisan key:generate
           php artisan migrate
+          php artisan passport:keys
           php artisan schema:dump
           vendor/bin/pest --ci --parallel
 
