Add Laravel Pennant to put the webpush functionality behind a feature flag

--- a/composer.json
+++ b/composer.json
@@ -83,7 +83,8 @@
         "spatie/laravel-medialibrary": "^11.13",
         "league/flysystem-sftp-v3": "^3.30",
         "laravel/wayfinder": "^0.1.12",
-        "laravel-notification-channels/webpush": "^10.4"
+        "laravel-notification-channels/webpush": "^10.4",
+        "laravel/pennant": "^1.18"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
